[project]
name = "model-api-generator"
version = "0.1.0"
description = "DocKey AI RAG-based document QA environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "openenv>=0.2.0",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "jinja2",
    "python-multipart",
    "chromadb",
    "pydantic",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
